# aws_reporter

./: .gitignore  README.md  poetry.toml  pyproject.toml
modules/actions/: README.md  pyproject.toml
modules/actions/src/actions/: analycer.py  exporter.py  importer.py
modules/actions/tests/: test_analycer.py  test_importer.py
modules/logger/: pyproject.toml
modules/resources/: README.md  pyproject.toml
modules/resources/src/resources/: __init__.py  import_subnets.py  importer_acm.py  importer_cloudfront.py  importer_ig.py  importer_route53.py  importer_route_tables.py  importer_vpc.py  importer_vpc_peering.py
modules/resources/tests/: test_importer_vpc_peering.py
modules/sessions/: README.md  pyproject.toml
modules/sessions/src/sessions/: __init__.py  org_sessions.py  single_session.py
modules/sessions/tests/: test_org_sessions.py  test_single_session.py
src/: README.md  pyproject.toml
src/src/: __main__.py  __main__.pys
