[project]
name = "logger"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodolfo Cordero",email = "1034434+rcor@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "logger", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
