[project]
name = "resources"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodolfo Cordero",email = "1034434+rcor@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "actions @ ../actions",
    "boto3 (>=1.40.51,<2.0.0)"
]

[tool.poetry]
packages = [{include = "resources", from = "src"}]


[tool.poetry.dependencies]
actions = {develop = true}
sessions = {develop = true}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
