[project]
name = "sessions"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodolfo Cordero",email = "1034434+rcor@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
"actions @ ../actions",
"boto3 >= 1.34",
]


[tool.poetry]
packages = [{include = "sessions", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


